# courseratesg

./: LICENSE  README.md
backend/: .env.local.example  .gitignore  .ruff.toml  ARCHITECTURE.md  DEVELOPER_GUIDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 6080b1fc46c1_initial_schema.py  6f8ce485b8a1_change_rating_fields_from_float_to_.py  9a573e065c32_add_course_name_to_reviews_table.py  f0d8d24c8d31_update_semester_format_to_literal_values.py  f46d02669629_update_course_name_from_course_table.py
backend/app/: main.py  routes.py
backend/app/api/v1/: router.py
backend/app/api/v1/depends/: auth.py  settings.py  storage.py
backend/app/api/v1/endpoints/: courses.py  professors.py  reviews.py  search.py  universities.py
backend/app/infrastructure/: rds_client.py
backend/app/models/: __init__.py  base.py  course.py  professor.py  review.py  university.py
backend/app/schemas/: __init__.py  course.py  professor.py  review.py  university.py
backend/app/settings/: __init__.py  app_settings.py  common.py  rds_settings.py
backend/app/storage/: __init__.py  course_storage.py  data_store.py  professor_storage.py  review_storage.py  university_storage.py
backend/scripts/: seed_database.py  start.sh
backend/src/: app.py
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
infrastructure/: .terraform.lock.hcl  README.md  acm.tf  alb.tf  amplify.tf  backup.tf  cloudwatch.tf  cloudwatch.tf.disabled  cognito.tf  (+9 more)
(+17 files in other folders)
