[tool.poetry]
name = "backend"
version = "0.1.0"
description = "FastAPI backend service"
authors = ["CS5224 Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.118.0"
uvicorn = {extras = ["standard"], version = "^0.37.0"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.4"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
