[tool.poetry]
name = "backend"
version = "0.1.0"
description = "FastAPI backend service"
authors = ["CS5224 Team"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.118.0"
uvicorn = {extras = ["standard"], version = "^0.37.0"}
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
psycopg2-binary = "^2.9.9"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
python-multipart = "^0.0.9"
email-validator = "^2.1.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.4"
httpx = "^0.27.2"
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
